# Origin

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Cargo.toml  HomeOS_Architecture.md  HomeOS_Complete.md  HomeOS_Review.md  HomeOS_Roadmap.md  KIRA.md  LYRA.md  MASTER.md  Makefile  NEXT_PLAN.md  PLAN.md  PLAN_PHAN_VIEC.md  PLAN_REWRITE.md  Plan_Olang.md  README.md  REBUILD_NOTES.md  REVIEW.md  REVIEW_VI.md  ROADMAP.md  SORA.md  SPEC_MATURITY_PIPELINE.md  SPEC_NODE_SILK.md  TASKBOARD.md  TRUTH.md  UDC_S0_ARROW_tree.md  UDC_S2_BOXDRAWING_tree.md  UDC_map.md  USER_PERSPECTIVE_REVIEW.md  build.sh  demo_read.py  go.mod  homeos.olang  install.sh  multilang.olang  olang  origin.olang  (+6 more)
.claude/: settings.json
crates/: EPITAPH.md
crates/agents/: Cargo.toml  README.md
crates/agents/src/: book.rs  chief.rs  domain_skills.rs  encoder.rs  gate.rs  instinct.rs  learning.rs  leo.rs  lib.rs  skill.rs  worker.rs
crates/agents/src/hierarchy/: chief.rs  leo.rs  mod.rs  worker.rs
crates/agents/src/pipeline/: book.rs  encoder.rs  learning.rs  mod.rs
crates/agents/src/skills/: domain_skills.rs  instinct.rs  mod.rs
crates/context/: Cargo.toml  README.md
crates/context/src/: context.rs  curve.rs  emotion.rs  engine.rs  fusion.rs  infer.rs  intent.rs  lib.rs  modality.rs  phrase.rs  snapshot.rs  template.rs  word_guide.rs
crates/context/src/analysis/: engine.rs  fusion.rs  infer.rs  intent.rs  mod.rs
crates/context/src/emotion/: affect.rs  curve.rs  mod.rs  snapshot.rs
crates/context/src/language/: mod.rs  modality.rs  phrase.rs  word_guide.rs
crates/memory/: Cargo.toml  README.md
crates/memory/src/: build.rs  dream.rs  lib.rs  proposal.rs
crates/olang/: Cargo.toml  README.md
crates/olang/src/: alphabet.rs  clone.rs  compact.rs  compiler.rs  constants.rs  encoder.rs  ir.rs  knowtree.rs  lca.rs  lib.rs  ling.rs  log.rs  math.rs  molecular.rs  precision.rs  qr.rs  reader.rs  registry.rs  self_model.rs  semantic.rs  separator.rs  startup.rs  syntax.rs  vm.rs  writer.rs
crates/olang/src/crypto/: aes256gcm.rs  ed25519.rs  mod.rs  qr.rs  sha256.rs  sha512.rs
crates/olang/src/exec/: bytecode.rs  compiler.rs  ir.rs  mod.rs  module.rs  optimize.rs  vm.rs
crates/olang/src/lang/: alphabet.rs  mod.rs  semantic.rs  syntax.rs
crates/olang/src/math/: mod.rs  precision.rs
crates/olang/src/mol/: encoder.rs  formula.rs  formula_adaptive.rs  hash.rs  lca.rs  mod.rs  molecular.rs  separator.rs  spline.rs
crates/olang/src/nlp/: ling.rs  mod.rs
crates/olang/src/storage/: clone.rs  compact.rs  knowtree.rs  log.rs  mod.rs  reader.rs  registry.rs  writer.rs
crates/olang/src/system/: mod.rs  self_model.rs  startup.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: concurrency.rs  emotion_tests.rs  error.rs  lib.rs  metrics.rs  origin.rs  parser.rs  response_template.rs  router.rs
crates/runtime/src/auth/: export.rs  key.rs  mod.rs  setup.rs  sign.rs  terms.rs  verify.rs
crates/runtime/src/core/: mod.rs  origin.rs  parser.rs  router.rs
crates/runtime/src/output/: error.rs  metrics.rs  mod.rs  response_template.rs
crates/runtime/src/pipeline/: concurrency.rs  emotion_tests.rs  mod.rs
crates/silk/: Cargo.toml  README.md
crates/silk/src/: edge.rs  graph.rs  hebbian.rs  index.rs  lib.rs  walk.rs
crates/ucd/: Cargo.toml  README.md  build.rs
crates/ucd/src/: lib.rs
crates/vsdf/: Cargo.toml  README.md
crates/vsdf/src/: body.rs  delta.rs  ffr.rs  fit.rs  lib.rs  occlusion.rs  physics.rs  scene.rs  sdf.rs  spline.rs  vector.rs
crates/vsdf/src/dynamics/: mod.rs  physics.rs  vector.rs
crates/vsdf/src/render/: ffr.rs  mod.rs  parametric.rs  scene.rs
crates/vsdf/src/shape/: fit.rs  mod.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: bridge.rs  lib.rs
data/: cuon_theo_chieu_gio.md  cuon_theo_chieu_gio.txt  cuon_theo_chieu_gio_ch1.md
docs/: API.md  BLUEPRINT.md  BUGFIX_ARCHITECTURE.md  CHECK_TO_PASS_LOGIC_HANDBOOK.md  DATASETS.md  DEMO_ANALYSIS_v2.md  HOMEOS_ON_OLANG1.md  HomeOS_SPEC_v3.md  HomeOS_TAI_CO_CAU_THUAT_TOAN.md  KNOWTREE_DESIGN.md  LANGUAGE_GENOME.md  MASTER.md  MILESTONE_20260323.md  OLANG.md  OLANG_1.0_RELEASE.md  OLANG_NEEDS.md  ORIGIN_VISION.md  Olang_Letter_to_Anthropic.docx  STORAGE_AND_SEARCH_NOTE.md  TASKBOARD_ARCHIVE.md  UDC_5D_FORMULAS.md  olang_guide.md  olang_handbook.md  roadmap.md  sample_book.txt  silk_architecture.md  Ｏ_SYMBOL_DN.txt
json/: UCD_18_INDEX.md
lib/: mat.ol  matrix.ol  vec.ol
logs/: evolution_data.csv
old/: HomeOS_16GB_example.md  HomeOS_SINH_HOC_PHAN_TU_TRI_THUC_v2.md  MEMORIAL.md  draft.md  origin.olang.backup-before-reseed
plans/: ANALYSIS_HARDWARE_REALITY.md  AUDIT_0_1_readiness.md  AUDIT_L0_ERRORS.md  AUDIT_OLANG_VS_V2.md  AUDIT_TONG_HOP.md  MASTER_PLAN_HOMEOS_V1.md  PLAN_0_2_parser_test.md  PLAN_0_4_semantic.md  PLAN_0_5_codegen.md  PLAN_10_BROWSER_E2E.md  PLAN_11_E2E_VERIFY.md  PLAN_12_RESPONSE_INTELLIGENCE.md  PLAN_1_1_vm_x86_64.md  PLAN_1_2_vm_arm64.md  PLAN_1_3_vm_wasm.md  PLAN_2_1_stdlib_ext.md  (+30 more)
tools/bench/: Cargo.toml  README.md
tools/bench/src/: chat_bench.rs  main.rs  silk_bench.rs  system_bench.rs
tools/check_logic/: Cargo.toml
tools/check_logic/src/: checks.rs  functional.rs  main.rs  parse_rs.rs  structural.rs
tools/intg/: Cargo.toml
tools/intg/src/: lib.rs
tools/intg/tests/: t01_ucd_olang.rs  t02_olang_silk.rs  t03_silk_context.rs  t04_agents_memory.rs  t05_runtime_e2e.rs  t06_writer_reader.rs  t07_isl_agents.rs  t08_evolution.rs  t09_persistence.rs  t10_invariants.rs  t11_vm_stdlib.rs  t12_build_roundtrip.rs  t13_stdlib_compile_audit.rs  t14_stress.rs  t15_fuzz.rs  t16_e2e_demo.rs  t16_pipeline_diag.rs  t17_formula_engine.rs  t17_response_intelligence.rs  t18_logic_check.rs  t19_olang_pipeline_e2e.rs
tools/seeder/: Cargo.toml  README.md
tools/seeder/src/: l2_data.rs  l3_topics.rs  main.rs  multilang.rs  seed_domains.rs
tools/seeder/src/domains/: algorithms.rs  biology.rs  chemistry.rs  math.rs  mod.rs  philosophy.rs  physics.rs
tools/seeder/tests/: domain_tests.rs
tools/server/: Cargo.toml  README.md
tools/server/src/: import_utf32.rs  main.rs
(+300 files in other folders)
