[workspace]
resolver = "2"
members = [
    "crates/ucd",
    "crates/olang",
    "crates/silk",
    "crates/vsdf",
    "crates/isl",
    "crates/hal",
    "crates/wasm",
    "crates/context",
    "crates/agents",
    "crates/memory",
    "crates/runtime",
    "crates/homemath",
    "tools/seeder",
    "tools/inspector",
    "tools/server",
    "tools/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ucd     = { path = "crates/ucd" }
olang   = { path = "crates/olang" }
silk    = { path = "crates/silk" }
vsdf    = { path = "crates/vsdf" }
context = { path = "crates/context" }
agents  = { path = "crates/agents" }
memory  = { path = "crates/memory" }
runtime = { path = "crates/runtime" }
hal      = { path = "crates/hal" }
homemath = { path = "crates/homemath" }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
sha2          = { version = "0.10", default-features = false }
aes-gcm       = { version = "0.10", default-features = false, features = ["alloc", "aes"] }
