[package]
name    = "runtime"
version.workspace = true
edition.workspace = true
description = "HomeOS runtime — entry point, parser, response rendering"

[lib]
path = "src/lib.rs"

[features]
default = []
std     = ["hal/std"]

[dependencies]
ucd     = { workspace = true }
olang   = { workspace = true }
silk    = { workspace = true }
context = { workspace = true }
agents  = { workspace = true }
isl     = { path = "../isl" }
memory  = { workspace = true }
hal     = { workspace = true }
vsdf    = { workspace = true }
homemath = { workspace = true }
