[package]
name    = "ucd"
version.workspace = true
edition.workspace = true
description = "Unicode 18.0 character database — build-time Molecule lookup"
build   = "build.rs"

[features]
default = ["reverse-index"]
## Reverse index (HASH_TO_CP + bucket_cps).
## Thêm ~40KB static data. Tắt trên embedded (ESP32/MCU) để tiết kiệm SRAM.
reverse-index = []

[lib]
name = "ucd"
path = "src/lib.rs"
