[package]
name    = "bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
ucd     = { workspace = true }
olang   = { workspace = true, features = ["std"] }
agents  = { workspace = true, features = ["std"] }
runtime = { workspace = true, features = ["std"] }
